depots 2eme partie fin

--- a/2_Elasticsearch.ipynb
+++ b/2_Elasticsearch.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,6 +552,13 @@
     "# Affichage de la HeatMap avec les pourcentages\n",
     "sns.heatmap(matrix, annot=True, fmt='.1f', cmap='YlGnBu')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -634,6 +641,93 @@
     "    # Affichage des résultats\n",
     "    print(f\"{stage}: {len(full_hits)} (full search), {len(fuzzy_hits)} (fuzzy search)\")\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rechercher les textes:\n",
+    "####            - qui doivent matcher l’expression “good day” (must)\n",
+    "####            - chez les patients encore en consultation (filter)\n",
+    "####            - qui contiennent si possible “to rest” (should)\n",
+    "####            - qui ne doivent pas avoir seuil de confiance inférieur à 0.5 s’il existe. \n",
+    "####            - Observer la répartition de ces résultats par sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fear       0.5\n",
+      "sadness    0.5\n",
+      "Name: emotion, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_9752\\337012199.py:28: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  res = es.search(index='notes', body=query)\n",
+      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_9752\\337012199.py:28: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.17/security-minimal-setup.html to enable security.\n",
+      "  res = es.search(index='notes', body=query)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Connexion à Elasticsearch\n",
+    "es = Elasticsearch(hosts=['http://localhost:9200'])\n",
+    "\n",
+    "# Requête de recherche pour récupérer les documents correspondant aux critères\n",
+    "query = {\n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": [\n",
+    "                {\"match_phrase\": {\"text\": \"good day\"}}\n",
+    "            ],\n",
+    "            \"filter\": [\n",
+    "                {\"term\": {\"patient_left\": False}}\n",
+    "            ],\n",
+    "            \"should\": [\n",
+    "                {\"match_phrase\": {\"text\": \"to rest\"}}\n",
+    "            ],\n",
+    "            \"must_not\": [\n",
+    "                {\"range\": {\"confidence\": {\"lt\": 0.5}}}\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Exécution de la requête de recherche\n",
+    "res = es.search(index='notes', body=query)\n",
+    "\n",
+    "# Récupération des résultats\n",
+    "hits = res['hits']['hits']\n",
+    "\n",
+    "# Création d'un DataFrame à partir des résultats\n",
+    "data = [hit['_source'] for hit in hits]\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Calcul de la répartition des sentiments\n",
+    "sentiment_counts = df['emotion'].value_counts(normalize=True)\n",
+    "\n",
+    "# Affichage des résultats\n",
+    "print(sentiment_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
