depot fin partie 2

--- a/2_Elasticsearch.ipynb
+++ b/2_Elasticsearch.ipynb
@@ -535,7 +535,7 @@
    "source": [
     "### Pour chacune des étapes du deuil (denial, anger, bargaining, depression, and acceptance) rechercher le nombre de text correspondants à l’aide:\n",
     "###         - d’une recherche pleine\n",
-    "###         - d’une fuzzy recherche."
+    "###         - d’une fuzzy recherche.  → on peut spécifier sur type de query un niveau de “fuzziness” (fautes de frappe)\n"
    ]
   },
   {
@@ -631,13 +631,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Textes des documents:\n",
+      "- ` Did you have a good day at the office ? \" she asked , hearing herself with horr\n",
+      "- i was feeling pretty anxious all day but my first day at work was a very good day and that helped a lot\n",
+      "- i had a good day but right now im feeling pretty irritable for no real reason meaning nothing significant happened to make me feel annoyed\n",
+      "\n",
+      "Répartition des sentiments:\n",
       "fear     0.666667\n",
       "anger    0.333333\n",
       "Name: emotion, dtype: float64\n"
@@ -647,9 +653,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_17936\\337012199.py:28: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_26508\\2319278150.py:28: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  res = es.search(index='notes', body=query)\n",
-      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_17936\\337012199.py:28: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.17/security-minimal-setup.html to enable security.\n",
+      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_26508\\2319278150.py:28: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.17/security-minimal-setup.html to enable security.\n",
       "  res = es.search(index='notes', body=query)\n"
      ]
     }
@@ -691,17 +697,216 @@
     "data = [hit['_source'] for hit in hits]\n",
     "df = pd.DataFrame(data)\n",
     "\n",
+    "# Affichage des textes des documents\n",
+    "print(\"Textes des documents:\")\n",
+    "for text in df['text']:\n",
+    "    print(f\"- {text}\")\n",
+    "\n",
     "# Calcul de la répartition des sentiments\n",
     "sentiment_counts = df['emotion'].value_counts(normalize=True)\n",
     "\n",
-    "# Affichage des résultats\n",
+    "# Affichage de la répartition des sentiments\n",
+    "print(\"\\nRépartition des sentiments:\")\n",
     "print(sentiment_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taille de l'index 'notes': 8172317 octets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\impej\\AppData\\Local\\Temp\\ipykernel_17936\\4278657928.py:7: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.17/security-minimal-setup.html to enable security.\n",
+      "  stats = es.indices.stats(index='notes')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "\n",
+    "# Connexion à Elasticsearch\n",
+    "es = Elasticsearch(hosts=['http://localhost:9200'])\n",
+    "\n",
+    "# Obtention des statistiques de l'index\n",
+    "stats = es.indices.stats(index='notes')\n",
+    "\n",
+    "# Taille de l'index en octets\n",
+    "size_in_bytes = stats['_all']['primaries']['store']['size_in_bytes']\n",
+    "\n",
+    "print(f\"Taille de l'index 'notes': {size_in_bytes} octets\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### questions théoriques\n",
+    "\n",
+    "### Qu’est ce que le sharding, comment pourrait-on imaginer un sharding sur cet index?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le sharding dans Elasticsearch permet de distribuer les données sur plusieurs nœuds pour une meilleure évolutivité et une meilleure performance. Cela permet également de répartir la charge de travail entre les nœuds et d'optimiser l'utilisation des ressources disponibles.\n",
+    "La quantitée de données sur le projet n'est pas suffisante pour necessiter l'utilisation du sharding. Mais on pourrait imager en cas de besoin créer 2 (ou plus suivant la taille de la BDD) shards primaires ou l'on sépare les patients encore suivis (patient_left:false) et des replicats sur chaques nœuds."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quels ingestion pipelines seraient pertinents pour notre sujet.\n",
+    "\n",
+    "Extraction de champs: Si les  documents contiennent des données structurées sous forme de texte (par exemple, des données **JSON** ou **CSV**), on peut utiliser un processeur tel que `json` ou `csv` pour extraire les champs pertinents à partir du contenu du document et les stocker en tant que champs distincts dans l’index."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intégration de la gestion des stopwords au niveau du mapping\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from elasticsearch import Elasticsearch\n",
+    "\n",
+    "# # Connexion à Elasticsearch\n",
+    "# es = Elasticsearch(hosts=['http://localhost:9200'])\n",
+    "\n",
+    "# # Création d'un index avec un filtre de stopwords\n",
+    "# es.indices.create(index='notes', body={\n",
+    "#     'settings': {\n",
+    "#         'analysis': {\n",
+    "#             'analyzer': {\n",
+    "#                 'my_analyzer': {\n",
+    "#                     'type': 'standard',\n",
+    "#                     'stopwords': '_english_'\n",
+    "#                 }\n",
+    "#             }\n",
+    "#         }\n",
+    "#     },\n",
+    "#     'mappings': {\n",
+    "#         'properties': {\n",
+    "#             'text': {\n",
+    "#                 'type': 'text',\n",
+    "#                 'analyzer': 'my_analyzer'\n",
+    "#             }\n",
+    "#         }\n",
+    "#     }\n",
+    "# })\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Intégration d’un modèle de ML comme pipeline d’ingestion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# from elasticsearch import Elasticsearch\n",
+    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# # Connexion à Elasticsearch\n",
+    "# es = Elasticsearch(hosts=['http://localhost:9200'])\n",
+    "\n",
+    "# # Votre modèle existant\n",
+    "# clf = RandomForestClassifier()\n",
+    "\n",
+    "# # Sérialisation du modèle au format JSON\n",
+    "# model = json.dumps(clf)\n",
+    "\n",
+    "# # Stockage du modèle dans Elasticsearch\n",
+    "# es.ml.put_trained_model(model_id='my_model', body=model)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# #########################################\n",
+    "# # Une fois que votre modèle est stocké dans Elasticsearch, vous pouvez créer un pipeline d’ingestion qui utilise le processeur \n",
+    "# # inference pour appliquer votre modèle aux documents lors de leur indexation. Voici un exemple de code qui crée un pipeline d’ingestion \n",
+    "# # nommé my_pipeline qui utilise le processeur inference pour appliquer votre modèle pré-entraîné nommé my_model aux documents lors \n",
+    "# # de leur indexation:\n",
+    "# #########################################\n",
+    "\n",
+    "\n",
+    "# from elasticsearch import Elasticsearch\n",
+    "\n",
+    "# # Connexion à Elasticsearch\n",
+    "# es = Elasticsearch(hosts=['http://localhost:9200'])\n",
+    "\n",
+    "# # Création d'un pipeline d'ingestion avec le processeur inference\n",
+    "# es.ingest.put_pipeline(id='my_pipeline', body={\n",
+    "#     'description': 'My Ingest Pipeline',\n",
+    "#     'processors': [\n",
+    "#         {\n",
+    "#             'inference': {\n",
+    "#                 'model_id': 'my_model',\n",
+    "#                 'field_map': {\n",
+    "#                     'text': 'text'\n",
+    "#                 },\n",
+    "#                 'target_field': 'emotion'\n",
+    "#             }\n",
+    "#         }\n",
+    "#     ]\n",
+    "# })\n",
+    "\n",
+    "# ##################################################################################\n",
+    "# # Ce code crée un pipeline d’ingestion nommé my_pipeline qui utilise le processeur inference pour appliquer votre modèle pré-entraîné nommé my_model\n",
+    "# # aux documents lors de leur indexation. Le processeur utilise une carte des champs pour mapper le champ text du document d’entrée au champ text attendu \n",
+    "# # par le modèle, et il stocke la prédiction du modèle dans le champ emotion du document.\n",
+    "\n",
+    "# # Pour utiliser ce pipeline d’ingestion lors de l’indexation d’un document, vous pouvez spécifier son ID dans la requête d’indexation comme suit:\n",
+    "# ##################################################################################\n",
+    "\n",
+    "# # # doc = {\n",
+    "# # #     'text': 'i still feel really regretful for leaving'\n",
+    "# # # }\n",
+    "# # # es.index(index='notes', pipeline='my_pipeline', body=doc)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KIBANA   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# http://localhost:5601/app/home#/"
+   ]
   }
  ],
  "metadata": {
